security_group.tf
provider "aws" {
  version = "~> 2.0"
  region     = "ap-south-1"
  profile    = "akash"  
}
resource "aws_security_group" "mysecurity1" {
  name        = "mysecurity1"
  description = "Allow TLS inbound traffic"
  vpc_id      = "vpc-6fb9a407"

  ingress {
    description = "TLS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "TLS from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "TLS from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "mysecurity1"
  }
}
